log
Thu 20 Apr 2023 09:37:46 PM UTC: 
 tests:  1|8
total_score: 0/70
6d7ec07
Fri 21 Apr 2023 12:31:04 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:10: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |   newTree->root = NULL;
      |          ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *newTree = (TreeMap *) malloc(sizeof(TreeMap*));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:10: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   newTree->current = NULL;
      |          ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *newTree = (TreeMap *) malloc(sizeof(TreeMap*));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:45:10: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   45 |   newTree->lower_than = lower_than;
      |          ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *newTree = (TreeMap *) malloc(sizeof(TreeMap*));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3773f0d
Fri 21 Apr 2023 12:32:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
70296a8
Fri 21 Apr 2023 12:41:35 AM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  11|6
total_score: 15/70
be24e97
Fri 21 Apr 2023 01:20:08 AM UTC: 
 treemap.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  11|6
total_score: 15/70
95d57da
Fri 21 Apr 2023 01:34:39 AM UTC: 
 treemap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
1f91c20
Fri 21 Apr 2023 01:36:34 AM UTC: 
 treemap.c | 38 --------------------------------------
 1 file changed, 38 deletions(-)
 tests:  11|6
total_score: 15/70
44ecd99
Fri 21 Apr 2023 01:36:42 AM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
8fa629d
Fri 21 Apr 2023 01:45:48 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
08f057f
Fri 21 Apr 2023 01:46:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
68e7b4e
Fri 21 Apr 2023 01:47:52 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
07f32ff
Fri 21 Apr 2023 01:49:00 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0834488
Fri 21 Apr 2023 01:49:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
25ef3b9
Fri 21 Apr 2023 03:06:57 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
160fe75
